# synode-council-of-ai-agents

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  about.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
crates/council-core/: Cargo.toml
crates/council-core/src/: chat.rs  lib.rs  sessions.rs  settings.rs
crates/council-core/src/keychain/: macos.rs  mod.rs  windows.rs
crates/council-core/src/models/: config.rs  session.rs
crates/council-core/src/providers/: anthropic.rs  cohere.rs  deepseek.rs  google.rs  mistral.rs  mod.rs  openai.rs  together.rs  xai.rs
crates/telegram-bot/: Cargo.toml
crates/telegram-bot/src/: council.rs  direct_chat.rs  formatting.rs  handlers.rs  lib.rs  main.rs  state.rs
docs/: ADDING_PROVIDERS.md  API_PROVIDERS.md  ARCHITECTURE.md  SETUP_GUIDE.md  TELEGRAM_BOT.md
src/: about.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: api_calls.rs  keychain.rs  mod.rs  sessions.rs  settings.rs  telegram.rs  window.rs
src-tauri/src/models/: config.rs
src/components/about/: AboutWindow.tsx
src/components/chat/: ChatView.tsx  ClarifyingQuestion.tsx  DiscussionSettingsBar.tsx  ParallelStatusOverlay.tsx
src/components/layout/: Header.tsx
src/components/settings/: AdvancedSettings.tsx  LocalModelsSettings.tsx  SettingsModal.tsx  TelegramSettings.tsx  UsageSettings.tsx
src/components/setup/: SetupWizard.tsx
src/lib/: tauri.ts
src/stores/: councilStore.ts  settingsStore.ts
src/styles/: globals.css
src/types/: index.ts
