[package]
name = "synode"
version = "0.4.3"
description = "A council of AI models that collaboratively help you make informed decisions"
authors = ["Synode Contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
council-core = { path = "../crates/council-core" }
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
council-telegram-bot = { path = "../crates/telegram-bot" }
tauri-plugin-opener = "2"
